search results no longer overflow page

--- a/flask_app/static/scss/custom.scss
+++ b/flask_app/static/scss/custom.scss
@@ -45,3 +45,8 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 .sidebar {
     min-width: 300px;
 }
+@include media-breakpoint-down(md) {
+  .search-results {
+    max-width: 100%;
+  }
+}
